--- a/hwhois.cabal
+++ b/hwhois.cabal
@@ -10,12 +10,13 @@ license:             BSD3
 license-file:        LICENSE
 author:              Ricky Elrod
 maintainer:          ricky@elrod.me
--- copyright:           
+
 category:            Network
 build-type:          Simple
 cabal-version:       >=1.8
 
 executable hwhois
-  -- main-is:             
+  main-is:             hwhois.hs
   -- other-modules:       
-  build-depends:       base ==4.6.*
+  build-depends:       base ==4.6.*, optparse-applicative ==0.7.*, whois
+  ghc-options:         -Wall -O2
